add auth for blog api and fix unit tests