@@ -10,10 +10,11 @@ import com.pregnancy.edu.blog.tag.Tag;
 import com.pregnancy.edu.blog.tag.TagService;
 import com.pregnancy.edu.myuser.MyUser;
 import com.pregnancy.edu.myuser.UserService;
-import com.pregnancy.edu.system.consts.Role;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -25,7 +26,10 @@ public class DBDataInitializer implements CommandLineRunner {
     private final BlogPostCommentService blogPostCommentService;
     private final TagService tagService;
 
-    public DBDataInitializer(UserService userService, BlogPostService blogPostService, BlogPostLikeService blogPostLikeService, BlogPostCommentService blogPostCommentService, TagService tagService) {
+    public DBDataInitializer(UserService userService, BlogPostService blogPostService,
+                             BlogPostLikeService blogPostLikeService,
+                             BlogPostCommentService blogPostCommentService,
+                             TagService tagService) {
         this.userService = userService;
         this.blogPostService = blogPostService;
         this.blogPostLikeService = blogPostLikeService;
@@ -35,80 +39,82 @@ public class DBDataInitializer implements CommandLineRunner {
 
     @Override
     public void run(String... args) throws Exception {
+        // Create and save users first
+        MyUser u1 = createUser("john@example.com", "john", "123456", true, "admin");
+        MyUser u2 = createUser("eric@example.com", "eric", "654321", true, "user");
+        MyUser u3 = createUser("tom@example.com", "tom", "qwerty", false, "user");
 
-        // Create some users.
-        MyUser u1 = new MyUser();
-//        u1.setId(1L);
-        u1.setEmail("john@example.com");
-        u1.setUsername("john");
-        u1.setPassword("123456");
-        u1.setEnabled(true);
-        u1.setRole("admin");
+        userService.save(u1);
+        userService.save(u2);
+        userService.save(u3);
 
-        MyUser u2 = new MyUser();
-//        u2.setId(2L);
-        u2.setEmail("eric@example.com");
-        u2.setUsername("eric");
-        u2.setPassword("654321");
-        u2.setEnabled(true);
-        u2.setRole("user");
-
-        MyUser u3 = new MyUser();
-//        u3.setId(3L);
-        u3.setEmail("tom@example.com");
-        u3.setUsername("tom");
-        u3.setPassword("qwerty");
-        u3.setEnabled(false);
-        u3.setRole("user");
-
-        BlogPost p1 = new BlogPost();
-        p1.setPageTitle("Top 10 Foods Every Pregnant Mom Should Include in Her Diet");
-        p1.setContent("Content 1");
-        p1.setFeaturedImageUrl("https://images.squarespace-cdn.com/content/v1/57c93870b3db2b6e16992e6c/1512434151171-3RNNOUGZXAIRBBRU342M/pregnant-mom-baby");
-        p1.setShortDescription("By Texas Health and Human services: If you experience any of these symptoms during or after");
-        BlogPost p2 = new BlogPost();
-        p2.setPageTitle("The Importance of Sleep for Moms and Babies: Tips to Rest Better");
-        p2.setContent("Content 2");
-        p2.setFeaturedImageUrl("https://images.squarespace-cdn.com/content/v1/57c93870b3db2b6e16992e6c/1512434151171-3RNNOUGZXAIRBBRU342M/pregnant-mom-baby");
-        p2.setShortDescription("By Texas Health and Human services: If you experience any of these symptoms during or after");
-        BlogPost p3 = new BlogPost();
-        p3.setPageTitle("5 Simple Prenatal Yoga Poses to Reduce Stress and Boost Energy");
-        p3.setContent("Content 3");
-        p3.setFeaturedImageUrl("https://images.squarespace-cdn.com/content/v1/57c93870b3db2b6e16992e6c/1512434151171-3RNNOUGZXAIRBBRU342M/pregnant-mom-baby");
-        p3.setShortDescription("By Texas Health and Human services: If you experience any of these symptoms during or after");
-        BlogPost p4 = new BlogPost();
-        p4.setPageTitle("Pregnancy Warning Signs You Should Never Ignore");
-        p4.setContent("Content 4");
-        p4.setFeaturedImageUrl("https://images.squarespace-cdn.com/content/v1/57c93870b3db2b6e16992e6c/1512434151171-3RNNOUGZXAIRBBRU342M/pregnant-mom-baby");
-        p4.setShortDescription("By Texas Health and Human services: If you experience any of these symptoms during or after");
-        BlogPost p5 = new BlogPost();
-        p5.setPageTitle("Fun and Educational Games to Boost Your Baby\\'s Brain Development");
-        p5.setContent("Content 5");
-        p5.setFeaturedImageUrl("https://images.squarespace-cdn.com/content/v1/57c93870b3db2b6e16992e6c/1512434151171-3RNNOUGZXAIRBBRU342M/pregnant-mom-baby");
-        p5.setShortDescription("For children, play is not just about having fun—it\\'s crucial for developing critical");
-        BlogPost p6 = new BlogPost();
-        p6.setPageTitle("Common Newborn Health Issues and How to Handle Them Like a Pro");
-        p6.setContent("Content 6");
-        p6.setFeaturedImageUrl("https://images.squarespace-cdn.com/content/v1/57c93870b3db2b6e16992e6c/1512434151171-3RNNOUGZXAIRBBRU342M/pregnant-mom-baby");
-        p6.setShortDescription("If you\\'re a first-time parent, and even if you\\'ve already been through it before");
-
+        // First create and save all tags
         Tag t1 = new Tag();
-        t1.setName("Tag1");
+        t1.setName("Pregnancy");
+        t1 = tagService.save(t1);
 
         Tag t2 = new Tag();
-        t2.setName("Tag2");
+        t2.setName("Nutrition");
+        t2 = tagService.save(t2);
 
         Tag t3 = new Tag();
-        t3.setName("Tag3");
+        t3.setName("Sleep");
+        t3 = tagService.save(t3);
 
-//        p1.setTags(List.of(t1, t2));
-//        p2.setTags(List.of(t1, t3));
-//        p3.setTags(List.of(t2, t3));
-//
-//        t1.setBlogPosts(List.of(p2, p3));
-//        t2.setBlogPosts(List.of(p1, p3));
-//        t3.setBlogPosts(List.of(p1, p2));
-//
+        BlogPost p1 = createBlogPost(
+                "Top 10 Foods Every Pregnant Mom Should Include in Her Diet",
+                "Content 1",
+                "https://images.squarespace-cdn.com/content/v1/57c93870b3db2b6e16992e6c/1512434151171-3RNNOUGZXAIRBBRU342M/pregnant-mom-baby",
+                "By Texas Health and Human Services: If you experience any of these symptoms during or after",
+                new ArrayList<>(Arrays.asList(t1, t2, t3))
+        );
+
+        BlogPost p2 = createBlogPost(
+                "The Importance of Sleep for Moms and Babies: Tips to Rest Better",
+                "Content 2",
+                "https://images.squarespace-cdn.com/content/v1/57c93870b3db2b6e16992e6c/1512434151171-3RNNOUGZXAIRBBRU342M/pregnant-mom-baby",
+                "By Texas Health and Human Services: If you experience any of these symptoms during or after",
+                new ArrayList<>(Arrays.asList(t1, t2))
+        );
+
+        BlogPost p3 = createBlogPost(
+                "5 Simple Prenatal Yoga Poses to Reduce Stress and Boost Energy",
+                "Content 3",
+                "https://images.squarespace-cdn.com/content/v1/57c93870b3db2b6e16992e6c/1512434151171-3RNNOUGZXAIRBBRU342M/pregnant-mom-baby",
+                "By Texas Health and Human Services: If you experience any of these symptoms during or after",
+                new ArrayList<>(Arrays.asList(t1, t2, t3))
+        );
+
+        BlogPost p4 = createBlogPost(
+                "Pregnancy Warning Signs You Should Never Ignore",
+                "Content 4",
+                "https://images.squarespace-cdn.com/content/v1/57c93870b3db2b6e16992e6c/1512434151171-3RNNOUGZXAIRBBRU342M/pregnant-mom-baby",
+                "By Texas Health and Human Services: If you experience any of these symptoms during or after",
+                new ArrayList<>(Arrays.asList(t1, t3))
+        );
+
+        BlogPost p5 = createBlogPost(
+                "Fun and Educational Games to Boost Your Baby's Brain Development",
+                "Content 5",
+                "https://images.squarespace-cdn.com/content/v1/57c93870b3db2b6e16992e6c/1512434151171-3RNNOUGZXAIRBBRU342M/pregnant-mom-baby",
+                "For children, play is not just about having fun—it's crucial for developing critical",
+                new ArrayList<>(Arrays.asList(t1, t2))
+        );
+
+        BlogPost p6 = createBlogPost(
+                "Common Newborn Health Issues and How to Handle Them Like a Pro",
+                "Content 6",
+                "https://images.squarespace-cdn.com/content/v1/57c93870b3db2b6e16992e6c/1512434151171-3RNNOUGZXAIRBBRU342M/pregnant-mom-baby",
+                "If you're a first-time parent, and even if you've already been through it before",
+                new ArrayList<>(Arrays.asList(t1, t2))
+        );
+
+        // Save blog posts
+        blogPostService.save(p1);
+        blogPostService.save(p2);
+        blogPostService.save(p3);
+
+        // Create and save comments
         BlogPostComment bpComment1 = new BlogPostComment();
         bpComment1.setContent("comment1");
         BlogPostComment bpComment2 = new BlogPostComment();
@@ -116,24 +122,28 @@ public class DBDataInitializer implements CommandLineRunner {
         BlogPostComment bpComment3 = new BlogPostComment();
         bpComment3.setContent("comment3");
 
-        this.userService.save(u1);
-        this.userService.save(u2);
-        this.userService.save(u3);
+        blogPostCommentService.save(bpComment1);
+        blogPostCommentService.save(bpComment2);
+        blogPostCommentService.save(bpComment3);
+    }
 
-        this.blogPostService.save(p1);
-        this.blogPostService.save(p2);
-        this.blogPostService.save(p3);
-        this.blogPostService.save(p4);
-        this.blogPostService.save(p5);
-        this.blogPostService.save(p6);
+    private MyUser createUser(String email, String username, String password, boolean enabled, String role) {
+        MyUser user = new MyUser();
+        user.setEmail(email);
+        user.setUsername(username);
+        user.setPassword(password);
+        user.setEnabled(enabled);
+        user.setRole(role);
+        return user;
+    }
 
-
-        this.blogPostCommentService.save(bpComment1);
-        this.blogPostCommentService.save(bpComment2);
-        this.blogPostCommentService.save(bpComment3);
-
-//        this.tagService.save(t1);
-//        this.tagService.save(t2);
-//        this.tagService.save(t3);
+    private BlogPost createBlogPost(String title, String content, String imageUrl, String description, List<Tag> tags) {
+        BlogPost post = new BlogPost();
+        post.setPageTitle(title);
+        post.setContent(content);
+        post.setFeaturedImageUrl(imageUrl);
+        post.setShortDescription(description);
+        tags.forEach(post::addTag);
+        return post;
     }
 }
